<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">joduro-claimzer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_claim">Edit Claim</string>
    <string name="title_activity_edit_expense">EditExpenseActivity</string>
    <string name="name">Name:</string>
    <string name="desc">Desc:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="date">Date:</string>
    <string name="cost">Cost:</string>
    <string name="currency">Currency:</string>
    <string name="done_editing">Save</string>
    <string name="jan">Jan</string>

    <string-array name="date_arrays">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

        <string-array name="status_arrays">
        <item>In progress</item>
        <item>Submitted</item>
        <item>Returned</item>
        <item>Approved</item>
    </string-array>
    
    <string name="title_activity_list_expenses">ListExpensesActivity</string>

    <string name="category">Category:</string>

    <string name="status">Status:</string>

</resources>
