<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditExpenseActivity" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expCostEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/expDescEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:layout_toRightOf="@+id/expDescTextView"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/expDescTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/expDescEditText"
        android:layout_alignParentLeft="true"
        android:text="@string/desc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/expCurrencyEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/expCurrencyTextView"
        android:layout_alignBottom="@+id/expCurrencyTextView"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/expCurrencyTextView"
        android:ems="10"
        android:inputType="textCapCharacters" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/expCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/expCurrencyEditText"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="46dp"
        android:text="@string/cost"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/expCostEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/expCostTextView"
        android:layout_alignBottom="@+id/expCostTextView"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/expCostTextView"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/expCurrencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/expSaveButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="62dp"
        android:text="@string/currency"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/expDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/expCostEditText"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="64dp"
        android:layout_toRightOf="@+id/expDateTextView"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/expDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/expDateEditText"
        android:layout_alignBottom="@+id/expDateEditText"
        android:layout_alignParentLeft="true"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/expSaveButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:minHeight="48dp"
        android:onClick="expSaveButton"
        android:text="@string/done_editing" />

</RelativeLayout>