<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/claimNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/claimNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/claimNameTextView"
        android:layout_toRightOf="@+id/claimNameTextView"
        android:ems="10"
        android:inputType="text" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expCostEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/claimSaveButton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/claimEndDateEditText"
        android:layout_weight="0.13"
        android:longClickable="false"
        android:minHeight="48dp"
        android:onClick="claimSaveButton"
        android:text="@string/done_editing" />

    <TextView
        android:id="@+id/claimStartDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/claimNameEditText"
        android:layout_marginTop="56dp"
        android:text="@string/start_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/claimStartDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/claimStartDateTextView"
        android:layout_toRightOf="@+id/claimStartDateTextView"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/claimEndDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/end_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/claimEndDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/claimEndDateTextView"
        android:layout_toRightOf="@+id/claimEndDateTextView"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

</RelativeLayout>